--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "sample-plugin-modif",
-	"name": "Sample Plugin Modif",
-	"version": "1.0.0",
+	"id": "easy-toggle-sidebars",
+	"name": "Easy toggle sidebars",
+	"version": "2.0.1",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "3C0D",
-	"authorUrl": "https://github.com/3C0D",
-	"isDesktopOnly": false
+	"description": "toggle sidebars double-clicking middle mouse button or each sidebar clicking middle mouse button and moving mouse towards the corresponding sidebar.",
+	"author": "1C0D",
+	"authorUrl": "",
+	"isDesktopOnly": true
 }
