--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
 	"description": "toggle sidebars with middle mouse button",
 	"main": "main.js",
 	"scripts": {
-		"dev": "tsx esbuild.config.mts",
+		"dev": "tsx scripts/esbuild.config.mts",
 		"start": "tsx scripts/start.mts",
+		"build": "tsc -noEmit -skipLibCheck && tsx scripts/esbuild.config.mts production",
+		"real": "SET REAL=1 && npm run build",
 		"acp": "tsx scripts/acp.mts",
 		"bacp": "tsx scripts/acp.mts -b",
-		"real": "SET REAL=1 && npm run build",
-		"test": "tsx scripts/test-plugin.mts",
-		"build": "tsc -noEmit -skipLibCheck && tsx esbuild.config.mts production",
 		"version": "tsx scripts/update-version.mts",
 		"release": "tsx scripts/release.mts"
 	},
@@ -26,7 +25,8 @@
 		"builtin-modules": "3.3.0",
 		"dotenv": "^16.4.5",
 		"dedent": "^1.5.1",
-		"esbuild": "0.17.3",
+		"esbuild": "^0.23.1",
+		"esbuild-sass-plugin": "^3.3.1",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4",
