--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"description": "toggle sidebars with middle mouse button",
 	"main": "main.js",
 	"scripts": {
-		"dev": "tsx scripts/esbuild.config.mts",
-		"start": "node scripts/start.mjs",
+		"start": "npm i && cross-env REAL=0 node scripts/start.mjs",
+		"dev": "cross-env REAL=0 tsx scripts/esbuild.config.mts",
 		"build": "tsc -noEmit -skipLibCheck && tsx scripts/esbuild.config.mts production",
-		"real": "SET REAL=1 && npm run build",
+		"real": "cross-env REAL=1 npm run build",
 		"acp": "tsx scripts/acp.mts",
 		"bacp": "tsx scripts/acp.mts -b",
 		"version": "tsx scripts/update-version.mts",
@@ -23,16 +23,14 @@
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
+		"cross-env": "^7.0.3",
 		"dotenv": "^16.4.5",
 		"dedent": "^1.5.1",
 		"esbuild": "^0.23.1",
-		"esbuild-sass-plugin": "^3.3.1",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4",
-		"fs": "^0.0.1-security",
 		"fs-extra": "^11.2.0",
-		"json-stringify-pretty-compact": "^4.0.0",
 		"semver": "^7.6.0",
 		"tsx": "^4.7.1"
 	}
